FIX 134934 1px gap between label and input text

--- a/skins/default/colors.scss
+++ b/skins/default/colors.scss
@@ -22,6 +22,7 @@ $list-border: 1px solid darkgrey;
 $separator-color: #ddd;
 
 $thin-border: 1px solid lightgray;
+$thin-border-top: 1px solid transparent;
 
 $window-head-background: darkgrey;
 $window-head-color: white;
